surah header alignment fix

--- a/styles.css
+++ b/styles.css
@@ -180,8 +180,12 @@ audio {
 
   #surah-info {
     width: 100%;
-    justify-content: space-between;
+    justify-content: start;
     margin-bottom: 5px;
+  }
+
+  #revelation-type {
+    margin-left: auto;
   }
 
   .surah-header {
